2008-12-29  vadim  <vadim@vk.crocodile.org>

	* runqmake.sh: starting with v3.0.4 build 717, building universal
	binary for Mac OS X (both x86 and ppc architectures)

	* bug #2474194 "Please Provide MacOS X PowerPC Builds": debugging
	universal binary package for Mac OS X, trying to make it work on
	Tiger as well

2008-12-28  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_iosacl_writers.cpp (PrintRule::_printDstService):
	support for the CustomService in compiler for IOS ACL, including
	support for address family, protocol and code string parameters.

	* PolicyCompiler_ipfw_writers.cpp (PrintRule::_printProtocol):
	support for the new "protocol" parameter of the CustomService
	object in compilers for ipfilter and ipfw.

	* NATCompiler_pf_writers.cpp (PrintRule::_printProtocol):
	'checking for "proto ..." in the custom service code string before
	printing protocol part in policy and nat compilers for pf.

2008-12-27  vadim  <vadim@vk.crocodile.org>

	* feature req. #1111267 "CustomService should specify protocol and
	parameters for it". Support for protocol string in Custom Service
	in compilers for iptables and PF.

	* CustomServiceDialog.cpp (CustomServiceDialog::loadFWObject):
	feature requests #1111267 "CustomService should specify protocol
	and parameters for it" and #2463048 "custom services should have
	IPv4/v6 setting". Added corresponding input elements to the
	CustomService object dialog.

	* CustomService.h (libfwbuilder): feature requests #1111267
	"CustomService should specify protocol and parameters for it" and
	#2463048 "custom services should have IPv4/v6 setting". Added
	attributes "protocol" and "address_family" to the CustomService
	object. Corresponding XML attributes are "#IMPLIED", this helps
	avoid having to provide XSLT auto-upgrade script for this
	version. Class CustomService returns "any" for the protocol and
	"ipv4" for address family if these attributes are missing.

2008-12-25  vadim  <vadim@vk.crocodile.org>
